 - fix #5629 (make footprint-terraforming respect buildee's actual facing)
 - fix #4447 (FPS-mode locking onto out-of-LOS units)
 - fix #4074 (equalize UnitDamaged parameters for LuaUI and LuaRules)
 - fix #2855 #5092 #5180 (jagged terrain shadows)
 - fix #5619 (area-commands not drawn on minimap)
 - fix #5617 (enable non-binary alpha-testing for unit icons)
 - fix #4164 (shield{Good,Bad}Color are RGBA float4's now)
 - fix #5587 (units in sharp holes sinking underground if also skidding)
 - fix #4723 (EmitSfx crash when referencing effect not defined in unitdef)
 - fix #4940 ("Recompressing Map Tiles with ETC1" load-stage triggering watchdog)
 - fix #5403 (extra ShieldPreDamaged parameters)
 - fix #5056 (let Spring.GetUnitWeaponHaveFreeLineOfFire take firing location as an argument)
 - fix #5188 (units refusing to move if ordered to non-reachable locations from factory)
 - fix #5639 (stunned transports not updating the position of their cargo)
 - fix #5304 (invisible collada models if no secondary texture provided)
 - fix #5318 (.ogg audio streams playing too fast)
 - fix #5358 (theoretical desync with std::{strtod,atof})
 - fix #5457 (TargetBorder broken for non-box collision volumes)
 - fix #5411 (PFS not finding optimal paths on maps with extreme speed-modifiers)
 - fix #5501 (PFS ignoring obstacles higher up or lower down cliffs)
 - fix #5469 (overflow-FPE in GetHeadingFromVectorF)
 - fix #5476 (assertion-failure with broken springcontent installation)
 - fix #5434 (add logging to detect unicode-aware libIL)
 - fix #5387 (GroundDecalHandler crash on exit)
 - fix #5421 (Spring.SendCommands("ctrlpanel") crash if sent inside a callin)
 - fix #5412 (GameRulesParams persisting through Spring.Reload)
 - fix #5493 (crash while reloading with LoadingMT=1)
 - fix #5463 (failing to connect to server sends user back to LuaMenu)
 - fix #5468 (classified)
 - fix #5461 (classified)
 - fix #5404 (MoveCtrl.SetGunshipMoveTypeData crash if called for a non-gunship unit)